Install language support

--- a/linux/i386-ubuntu-automatic.cfg
+++ b/linux/i386-ubuntu-automatic.cfg
@@ -6,7 +6,7 @@ d-i debian-installer/locale string en_US.UTF8
 d-i oem-config/enable boolean true
 
 d-i pkgsel/language-pack-patterns string
-d-i pkgsel/install-language-support boolean false
+d-i pkgsel/install-language-support boolean true
 
 #added Joshua Oct 17 2009
 
