Power off machines after installing

--- a/linux/i386-ubuntu-automatic.cfg
+++ b/linux/i386-ubuntu-automatic.cfg
@@ -17,7 +17,8 @@ d-i pkgsel/language-packs multiselect en, fr
 d-i pkgsel/update-policy select none
 
 #Finish install without notice at the end about rebooting
-d-i finish-install/reboot_in_progress note
+# Leave the note so it is obvious that a system has finished installing
+#d-i finish-install/reboot_in_progress note
 
 # Keyboard selection.
 #d-i console-tools/archs select at
@@ -285,6 +286,7 @@ d-i grub-installer/with_other_os boolean true
 # This is how to make the installer shutdown when finished, but not
 # reboot into the installed system.
 #d-i debian-installer/exit/halt boolean true
+d-i debian-installer/exit/poweroff boolean true
 
 ### X configuration
 # X can detect the right driver for some cards, but if you're preseeding,
