Install language support fully

--- a/linux/i386-ubuntu-automatic.cfg
+++ b/linux/i386-ubuntu-automatic.cfg
@@ -345,4 +345,5 @@ d-i oem-config-udeb/instructions text
 d-i preseed/late_command string \
     chroot /target rm /etc/apt/apt.conf; \
     chroot /target wget -O /usr/local/bin/fgqc http://preseed.shop.lan/scripts/fgqc; \
-    chroot /target chmod +x /usr/local/bin/fgqc
+    chroot /target chmod +x /usr/local/bin/fgqc; \
+    in-target apt-get install `check-language-support`
