--- a/linux/i386-ubuntu-automatic.cfg
+++ b/linux/i386-ubuntu-automatic.cfg
@@ -8,10 +8,9 @@ d-i oem-config/enable boolean true
 d-i pkgsel/language-pack-patterns string
 d-i pkgsel/install-language-support boolean true
 
-#added Joshua Oct 17 2009
-
 #Add language packs for French and English
 d-i pkgsel/language-packs multiselect en, fr
+d-i localechooser/supported-locales en_US, en_CA
 
 #Updates policy. No automatic updates.
 d-i pkgsel/update-policy select none
