--- a/linux/i386-lubuntu-natty-automatic.cfg
+++ b/linux/i386-lubuntu-natty-automatic.cfg
@@ -70,7 +70,7 @@ d-i netcfg/wireless_wep string
 #d-i mirror/protocol string ftp
 #d-i mirror/suite string gutsy
 
-d-i mirror/country string enter information manually
+d-i mirror/country string manual
 d-i mirror/http/hostname string ca.archive.ubuntu.com
 d-i mirror/http/directory string /ubuntu
 #d-i mirror/http/proxy string
@@ -239,10 +239,10 @@ d-i apt-setup/contrib boolean true
 #tasksel tasksel/first multiselect standard, web-server
 # If the desktop task is selected, install the kde and xfce desktops
 # instead of the default gnome desktop.
-tasksel tasksel/first multiselect ubuntu-standard, ubuntu-desktop
+tasksel tasksel/first multiselect ubuntu-standard
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server build-essential stress dialog gnome-ppp vim
+d-i pkgsel/include string openssh-server build-essential stress dialog gnome-ppp lubuntu-desktop
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
