--- a/linux/i386-ubuntu-natty-automatic.cfg
+++ b/linux/i386-ubuntu-natty-automatic.cfg
@@ -28,7 +28,7 @@ d-i console-keymaps-at/keymap select us
 ### Network configuration
 # netcfg will choose an interface that has link if possible. This makes it
 # skip displaying a list if there is more than one interface.
-d-i netcfg/choose_interface select auto
+#d-i netcfg/choose_interface select auto
 
 # To pick a particular interface instead:
 #d-i netcfg/choose_interface select eth1
@@ -70,7 +70,7 @@ d-i netcfg/wireless_wep string
 #d-i mirror/protocol string ftp
 #d-i mirror/suite string gutsy
 
-d-i mirror/country string enter information manually
+d-i mirror/country string manual
 d-i mirror/http/hostname string ca.archive.ubuntu.com
 d-i mirror/http/directory string /ubuntu
 #d-i mirror/http/proxy string
@@ -242,7 +242,7 @@ d-i apt-setup/contrib boolean true
 tasksel tasksel/first multiselect ubuntu-standard, ubuntu-desktop
 
 # Individual additional packages to install
-d-i pkgsel/include string openssh-server build-essential stress dialog gnome-ppp vim
+d-i pkgsel/include string openssh-server build-essential stress dialog gnome-ppp
 
 # Some versions of the installer can report back on what software you have
 # installed, and what software you use. The default is not to report back,
