--- a/linux/i386-ubuntu-automatic.cfg
+++ b/linux/i386-ubuntu-automatic.cfg
@@ -345,4 +345,9 @@ d-i preseed/late_command string \
     chroot /target rm /etc/apt/apt.conf; \
     chroot /target wget -O /usr/local/bin/fgqc http://preseed.shop.lan/scripts/fgqc; \
     chroot /target chmod +x /usr/local/bin/fgqc; \
-    in-target apt-get install `check-language-support`
+    apt-install `chroot /target check-language-support`; \
+    in-target gconftool-2 --direct \
+                --config-source xml:readwrite:/etc/gconf/gconf.xml.defaults \
+                --type string \
+                --set /apps/gnome-power-manager/buttons/lid_ac shutdown \
+                --set /apps/gnome-power-manager/buttons/lid_battery shutdown
