--- a/linux/ubuntu-automatic.cfg
+++ b/linux/ubuntu-automatic.cfg
@@ -273,4 +273,6 @@ oem-config oem-config/install-language-support boolean true
 d-i preseed/late_command string \
     chroot /target rm /etc/apt/apt.conf; \
     chroot /target wget -O /usr/local/bin/fgqc http://preseed.shop.lan/scripts/fgqc; \
-    chroot /target chmod +x /usr/local/bin/fgqc;
+    chroot /target chmod +x /usr/local/bin/fgqc; \
+    apt-install `chroot /target check-language-support`; \
+    echo "blacklist b43" > /target/etc/modprobe.d/blacklist-b43.conf
