Disable apport - Fixes #2239

--- a/linux/ubuntu-automatic.cfg
+++ b/linux/ubuntu-automatic.cfg
@@ -276,4 +276,5 @@ d-i preseed/late_command string \
     chroot /target chmod +x /usr/local/bin/fgqc; \
     apt-install `chroot /target check-language-support`; \
     chroot /target rm /var/lib/update-notifier/user.d/incomplete-language-support-gnome.note; \
-    echo "blacklist b43" > /target/etc/modprobe.d/blacklist-b43.conf
+    echo "blacklist b43" > /target/etc/modprobe.d/blacklist-b43.conf; \
+    sed -i s/enabled=1/enabled=0/ /etc/default/apport
