Correct sed invocation - Fixes #2239

--- a/linux/ubuntu-automatic.cfg
+++ b/linux/ubuntu-automatic.cfg
@@ -277,4 +277,4 @@ d-i preseed/late_command string \
     apt-install `chroot /target check-language-support`; \
     chroot /target rm /var/lib/update-notifier/user.d/incomplete-language-support-gnome.note; \
     echo "blacklist b43" > /target/etc/modprobe.d/blacklist-b43.conf; \
-    sed -i s/enabled=1/enabled=0/ /etc/default/apport
+    chroot /target /bin/sed -i s/enabled=1/enabled=0/ /etc/default/apport
