Add purge of flash plugin when OEM config is ran

--- a/linux/ubuntu-automatic.cfg
+++ b/linux/ubuntu-automatic.cfg
@@ -246,6 +246,9 @@ d-i oem-config-udeb/instructions text
 # Install full language support
 oem-config oem-config/install-language-support boolean true
 
+# Ensure the flash plugin is removed by oem-config
+oem-config oem-config/early_command string apt-get -y purge flashplugin-installer
+
 #### Advanced options
 ### Running custom commands during the installation
 # d-i preseeding is inherently not secure. Nothing in the installer checks
