Automatically install basic DVD reading software

--- a/linux/ubuntu-automatic.cfg
+++ b/linux/ubuntu-automatic.cfg
@@ -159,7 +159,7 @@ d-i apt-setup/non-free boolean false
 #d-i apt-setup/security_path string /ubuntu
 
 # Individual additional packages to install
-d-i pkgsel/include string stress dialog gnome-ppp
+d-i pkgsel/include string stress dialog gnome-ppp libdvdnav4 libdvdread4 gstreamer0.10-plugins-bad gstreamer0.10-plugins-ugly
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
 d-i pkgsel/upgrade select safe-upgrade
