--- a/linux/ubuntu-automatic.cfg
+++ b/linux/ubuntu-automatic.cfg
@@ -270,10 +270,6 @@ oem-config oem-config/early_command string apt-get -y purge flashplugin-installe
 
 # remove the proxy, and install qc bootstrap code
 d-i preseed/late_command string \
-    chroot /target rm /etc/apt/apt.conf; \
-    chroot /target wget -O /usr/local/bin/fgqc http://preseed.shop.lan/scripts/fgqc; \
-    chroot /target chmod +x /usr/local/bin/fgqc; \
-    apt-install `chroot /target check-language-support`; \
-    chroot /target rm /var/lib/update-notifier/user.d/incomplete-language-support-gnome.note; \
-    echo "blacklist b43" > /target/etc/modprobe.d/blacklist-b43.conf; \
-    chroot /target /bin/sed -i s/enabled=1/enabled=0/ /etc/default/apport
+    in-target wget -nv -O /tmp/install-late-command \
+      http://preseed.shop.lan/scripts/install-late-command; \
+    /bin/sh /target/tmp/install-late-command
