Dont use in-target for wget - Fixes #2574

--- a/linux/ubuntu-automatic.cfg
+++ b/linux/ubuntu-automatic.cfg
@@ -270,6 +270,6 @@ oem-config oem-config/early_command string apt-get -y purge flashplugin-installe
 
 # remove the proxy, and install qc bootstrap code
 d-i preseed/late_command string \
-    in-target wget -nv -O /tmp/install-late-command \
+    wget -O /tmp/install-late-command \
       http://preseed.shop.lan/scripts/install-late-command; \
-    /bin/sh /target/tmp/install-late-command
+    /bin/sh /tmp/install-late-command
